--- a/project/src/app/org-chart/tree/tree.component.html
+++ b/project/src/app/org-chart/tree/tree.component.html
@@ -1,9 +1,8 @@
 <ul>
-  <li *ngFor="let o of orgs" draggable="true" (dragstart)="drag($event)"
-          id="d_{{o.id}}" (dragover)="allow($event)" (drop)="drop($event,o)"
-          (click)="click($event,o)">
-    {{o.name}}<b title="하위 부서 만들기"
-          (click)="addDept($event,o)">+ &nbsp; &nbsp; </b>
-    <ui-tree [orgs]="o.sub"></ui-tree>
+  <li *ngFor="let d of depts" draggable="true" (dragstart)="drag($event)"
+          id="d_{{d.id}}" (dragover)="allow($event)" (drop)="drop($event,d)"
+          (click)="click($event,d)">
+    {{d.name}} <b title="하위 부서 만들기" (click)="addDept($event,d)">+</b>
+    <ui-tree [depts]="d.sub"></ui-tree>
   </li>
 </ul>
