--- a/project/src/app/doc/doc.component.html
+++ b/project/src/app/doc/doc.component.html
@@ -1,5 +1,9 @@
+<div>
+  <app-new-doc></app-new-doc>
+</div>
+
 <p class="text-right">
-  <a class="btn btn-success btn-sm" id="btn_new" routerLink="../doc/newDoc">결재등록</a>
+  <a class="btn btn-success btn-sm" id="btn_new">결재등록</a>
 </p>
 
 <div class="table-responsive">
