--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -2,7 +2,9 @@
   <app-join (outputProperty)="receive($event)"></app-join>
 </div>
 
-<div *ngIf="loginProc=='login'">
+<div *ngIf="l
+
+oginProc=='login'">
   <app-login (outputProperty)="receive($event)"></app-login>
 </div>
 
@@ -32,6 +34,7 @@
                   <!-- <li routerLinkActive="active"><a routerLink="emp">사원관리</a></li> -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                  <li><a style="cursor: pointer;" (click)="empMod()">회원정보수정</a></li>  
                   <li><a style="cursor: pointer;" (click)="logOut()">로그아웃</a></li>  
                 </ul>	 
               </div>
