--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -2,9 +2,7 @@
   <app-join (outputProperty)="receive($event)"></app-join>
 </div>
 
-<div *ngIf="l
-
-oginProc=='login'">
+<div *ngIf="loginProc=='login'">
   <app-login (outputProperty)="receive($event)"></app-login>
 </div>
 
