--- a/project/src/app/org-chart/org-chart.component.css
+++ b/project/src/app/org-chart/org-chart.component.css
@@ -2,10 +2,14 @@
   font-size: 1.8rem;
   margin-top: 3.3rem;
 }
+ui-tree + input {
+  margin-top: -1.1rem;
+  border-top: 0;
+}
 header {
   width: 50%;
   text-align: center;
-  margin: 0 0 0.5rem;
+  margin-bottom: .5rem;
 }
 strong {
   font-size: 2rem;
@@ -27,6 +31,10 @@ b {
 }
 table {
   background-color: #f8f8f8;
+  border: 1px solid silver;
+}
+table tr:first-child {
+  border-bottom: 1px solid silver;
 }
 tr th:first-child {
   padding-left: 3rem;
