--- a/project/src/app/org-chart/org-chart.component.css
+++ b/project/src/app/org-chart/org-chart.component.css
@@ -17,6 +17,9 @@ strong {
 header > span, header > input, div > input {
   float: right;
 }
+header > span {
+  margin-top: .5rem;
+}
 input {
   text-align: center;
 }
