--- a/project/src/app/org-chart/tree/tree.component.css
+++ b/project/src/app/org-chart/tree/tree.component.css
@@ -1,7 +1,7 @@
 li {
   list-style-type: none;
   border: 1px solid silver;
-  padding: .6rem 0 .6rem 1rem;
+  padding: .6rem 0 .6rem .6rem;
 }
 li li:first-child {
   margin-top: .6rem;
@@ -17,6 +17,8 @@ li li {
 li b {
   float: right;
   color: blue;
-  cursor: pointer;
   margin-right: 1.5rem;
+}
+span, b {
+  cursor: pointer;
 }
