--- a/project/src/app/org-chart/tree/tree.component.html
+++ b/project/src/app/org-chart/tree/tree.component.html
@@ -5,7 +5,7 @@
                   (drop)="parent.drop(true, $event, dept)"
                  (click)="parent.selectDept($event, dept)">
     &#x205e;&#x205e;&#x205e; <span>{{dept.name}}</span>
-    <b (click)="parent.addDept(dept)" title="하위 부서 만들기">+</b>
+    <b (click)="parent.addDept($event, dept)" title="하위 부서 만들기">+</b>
     <ui-tree [depts]="dept.sub"></ui-tree>
   </li>
 </ul>
