--- a/project/src/app/org-chart/tree/tree.component.css
+++ b/project/src/app/org-chart/tree/tree.component.css
@@ -2,6 +2,7 @@ li {
   list-style-type: none;
   border: 1px solid silver;
   padding: .6rem 0 .6rem .6rem;
+  cursor: pointer;
 }
 li li:first-child {
   margin-top: .6rem;
@@ -12,13 +13,12 @@ li li:last-child {
 li li {
   border-right-width: 0;
   border-bottom-width: 0;
+}
+li li span {
   cursor: move;
 }
 li b {
   float: right;
   color: blue;
   margin-right: 1.5rem;
-}
-span, b {
-  cursor: pointer;
 }
