--- a/project/src/app/org-chart/org-chart.component.html
+++ b/project/src/app/org-chart/org-chart.component.html
@@ -1,7 +1,7 @@
 <div class="bs-docs-section">
   <div class="row">
     <div class="col-lg-4">
-      <ui-tree [depts]="depts"></ui-tree>
+      <ui-tree [depts]="depts" [manager]="manager"></ui-tree>
       <input *ngIf="adding" placeholder="새 부서 이름" title="[Enter] 적용, [Esc] 취소"
               type="text" id="a" (keydown.enter)="add($event)" (keydown.esc)="adding = false">
       <br><br>
@@ -12,11 +12,11 @@
         <strong title="(클릭) - 부서 이름 변경" (click)="renameDept()">{{dept.name}} &nbsp; </strong>
         <input *ngIf="renaming" id="r" placeholder="새 이름" title="[Enter] 적용, [Esc] 취소"
                 type="text" (keydown.enter)="rename($event)" (keydown.esc)="renaming = false">
-        <b *ngIf="!renaming && !emps.length && dept.upId" title="폐쇄" (click)="deleteDept()">&#x2716;</b>
+        <b *ngIf="manager && !renaming && !emps.length && dept.upId" title="폐쇄" (click)="deleteDept()">&#x2716;</b>
         <span *ngIf="!renaming && emps.length">리더&nbsp; : &nbsp; &nbsp;
           <span *ngIf="!dept.chief">(없음)</span>
           <span *ngIf="dept.chief">
-            {{dept.chiefName}} &nbsp; <b title="해임" (click)="dismiss()">&#x2716;</b>
+            {{dept.chiefName}} &nbsp; <b *ngIf="manager" title="해임" (click)="dismiss()">&#x2716;</b>
           </span>
         </span>
       </header>
@@ -27,13 +27,13 @@
         </tr>
         <tr *ngFor="let emp of emps" id="e_{{emp.id}}"
             [class.sub-dept]="emp.deptId != dept.id"
-            [draggable]="emp.deptId == dept.id && emp.id != dept.chief"
+            [draggable]="manager && emp.deptId == dept.id && emp.id != dept.chief"
             (dragstart)="drag($event, emp)">
           <td>
-            <input title="리더" name="chief" [disabled]="emp.deptId != dept.id"
+            <input title="리더" name="chief" [disabled]="!manager || emp.deptId != dept.id"
               type="radio" (click)="appoint(emp)" [checked]="emp.id == dept.chief">
             &nbsp; {{emp.name}} &nbsp;
-            <b *ngIf="emp.deptId == dept.id && emp.id != dept.chief"
+            <b *ngIf="manager && emp.deptId == dept.id && emp.id != dept.chief"
                title="퇴사" (click)="deleteEmp(emp.id)">&#x2716;</b>
           </td>
           <td>{{emp.deptName}}</td>
