--- a/project/src/app/note/newnote/newnote.component.html
+++ b/project/src/app/note/newnote/newnote.component.html
@@ -4,11 +4,8 @@
     <div class="control-group" id="fields">
       <div class="controls">
         <div class="well bs-component">          
-          <div ng-app="myApp" ngControl="myCtrl" >            
-            <input type="text" id="author" name="author" [ngModel]="author" value={{note?.author}}/>   
-            <!-- value="1" -->
-            <input type="text" id="ts" name="ts" [ngModel]="ts">
-            <!-- value="2018-01-07 14:25:02" -->
+          <div ng-app="myApp" ngControl="myCtrl" hidden>                        
+            <input type="text" id="ts" name="ts" [ngModel]="ts">            
           </div>
 
           <div class="form-group">
