--- a/project/src/app/doc/doc.component.css
+++ b/project/src/app/doc/doc.component.css
@@ -5,3 +5,17 @@ th, td {
 a {
     cursor: pointer;
 }
+
+h4{
+    color:#3399FF;
+    font-weight:bold; 
+    font-size:15px
+}
+
+.textLeft {
+    text-align: left;
+}
+
+th {
+    background-color:#F6F8F8;
+}
