--- a/project/src/app/note/note.component.css
+++ b/project/src/app/note/note.component.css
@@ -15,18 +15,20 @@ th{
     background-color:#F6F8F8;
     padding:7px;
 }
+
 td{
     padding:7px;
 }
+
 h4{
     color:#3399FF; 
     font-weight:bold; 
     font-size:15px;
 }
+
 table{
     width:100%;
 }
-
 
 .center {
     text-align: center;        
@@ -46,4 +48,10 @@ table{
     margin: 0 1px;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a:hover:not(.active) {
+    background-color: #ddd;
+}
+
+.textLeft {
+    text-align: left;
+}
