--- a/project/src/app/note/note.component.html
+++ b/project/src/app/note/note.component.html
@@ -6,20 +6,20 @@
   <h4 class="sub-header">게시판 상세보기</h4>
   <table class="table-bordered">
     <tr class="active">
-      <th>작성자</th>
-      <td>{{note?.name}}</td>
-      <th>작성일</th>
-      <td>{{note?.ts | date:'yyyy년 MM월 dd일 HH시 mm분 ss초'}}</td>
+      <th style="width:25%">작성자</th>
+      <td style="width:25%">{{note?.name}}</td>
+      <th style="width:25%">작성일</th>
+      <td style="width:25%">{{note?.ts | date:'yyyy년 MM월 dd일 HH시 mm분'}}</td>
     </tr>
-    <tr style="text-align:left">
+    <tr class="textLeft">
       <th>제목</th>
       <td colspan="3">
         {{note?.title}}
       </td>
     </tr>
-    <tr style="text-align:left">
+    <tr class="textLeft">
       <th>내용</th>
-      <td colspan="3" row="3">
+      <td colspan="3">
         {{note?.body}}
       </td>
     </tr>
@@ -48,9 +48,9 @@
     <tbody>
       <tr *ngFor="let note of notes;index as i" data-index="#i">
         <td>{{note.id}}</td>
-        <td><a (click)="btnTitleClick(note.id,i)">{{note.title}}</a></td>
+        <td class="textLeft"><a (click)="btnTitleClick(note.id,i)">{{note.title}}</a></td>
         <td>{{note.name}}</td>
-        <td type="date">{{note.ts | date:'yy.MM.dd HH:mm:ss'}}</td>
+        <td type="date">{{note.ts | date:'yy.MM.dd HH:mm'}}</td>
       </tr>
     </tbody>
   </table>  
