--- a/project/src/app/login/login.component.html
+++ b/project/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="out">
   <div class="in">
     <h1 class="text-info">
-      TopCredu Login
+      TC Tech Login
     </h1>
 
     <form class="form-horizontal" (ngSubmit)="f.form.valid && login()" #f="ngForm" name="form">
