--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -20,7 +20,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand">TC</a>
+                <a class="navbar-brand" routerLink="main">TC</a>
               </div>
             
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
