--- a/project/src/app/main/main.component.html
+++ b/project/src/app/main/main.component.html
@@ -1,3 +1,11 @@
-<p>
-  main works!
-</p>
+<div class="image"></div>
+<img src="../../assets/image/123.jpg" alt="tc">
+&nbsp;
+  <div class="bs-docs-section">    
+    <div class="col-lg-6">
+      <app-m-note></app-m-note>
+    </div>
+    <div class="col-lg-6">
+      <app-m-doc></app-m-doc>
+    </div>
+  </div>
