--- a/project/src/app/note/note.component.html
+++ b/project/src/app/note/note.component.html
@@ -27,7 +27,7 @@
   <!-- 게시판 버튼 -->
   <p class="text-right" style="margin-top: 10px">
     <a class="btn btn-default btn-sm" id="btn_del" (click)="remove(note.id)">삭제</a>&nbsp;
-    <a class="btn btn-primary btn-sm" id="btn_mod" (click)="goupdate(note.id)">수정</a>&nbsp;
+    <a class="btn btn-primary btn-sm" id="btn_mod" (click)="goupdate(note.id,note.author)">수정</a>&nbsp;
     <a class="btn btn-default btn-sm" id="btn_list" (click)="btnListClick()">목록</a>
   </p>
 </div>
@@ -50,7 +50,7 @@
         <td>{{note.id}}</td>
         <td class="textLeft"><a (click)="btnTitleClick(note.id,i)">{{note.title}}</a></td>
         <td>{{note.name}}</td>
-        <td type="date">{{note.ts | date:'yy.MM.dd HH:mm'}}</td>
+        <td>{{note.ts | date:'yy.MM.dd HH:mm'}}</td>
       </tr>
     </tbody>
   </table>  
